--- a/history.html
+++ b/history.html
@@ -23,7 +23,7 @@
 </head>
 <body class="bg-gray-100 font-sans">
     <div class="max-w-4xl mx-auto p-4 md:p-8">
-        <!-- **NAVBAR UPDATED** -->
+        <!-- Navbar -->
         <nav class="mb-6 flex flex-wrap justify-between items-center bg-white p-3 rounded-lg shadow-sm gap-4">
             <a href="index.html" class="text-xl font-bold text-indigo-600">Pistacho评分</a>
             <div class="flex items-center space-x-4 flex-grow justify-center md:justify-start md:flex-grow-0 order-3 md:order-2 w-full md:w-auto">
@@ -37,7 +37,7 @@
                  <!-- Login/Logout button will be rendered here -->
             </div>
         </nav>
-        <!-- **END NAVBAR UPDATE** -->
+        <!-- End Navbar -->
 
         <header class="mb-6">
             <h1 id="history-title" class="text-4xl font-extrabold text-gray-800">我的点评历史</h1>
@@ -47,7 +47,6 @@
             <p id="loading-message" class="text-center text-gray-500">正在加载...</p>
         </div>
          <footer class="mt-8 text-center">
-            <!-- **LINK UPDATED**: Point to index.html (community) -->
             <a href="index.html" class="py-2 px-4 bg-indigo-600 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-700">&larr; 返回社区首页</a>
         </footer>
     </div>
@@ -257,7 +256,6 @@
             const ratingData = historicalRatings[ratingId];
              if (ratingData) {
                   // Pass the necessary data to results.html
-                  // Ensure we always pass the essential top-level fields
                   let detailedData = {
                       cigarInfo: ratingData.cigarInfo,
                       cigarReview: ratingData.cigarReview,
@@ -267,10 +265,9 @@
                       timestamp: ratingData.timestamp,
                       userNickname: ratingData.userNickname,
                       userEmail: ratingData.userEmail,
-                      isDraft: false // From history, never a draft
+                      isDraft: false
                   };
 
-                  // Add fullData parts ONLY if they exist and are valid
                   const hasCompleteFullData = ratingData.fullData &&
                                               ratingData.fullData.config &&
                                               ratingData.fullData.ratings &&
@@ -337,7 +334,6 @@
 
                  userRole = currentAuthUser?.db_role || 'general';
 
-                 // **TITLE UPDATE**
                  if (userRole === 'admin' || userRole === 'super_admin') {
                      historyTitle.textContent = "所有用户的点评历史";
                  } else {
@@ -348,7 +344,6 @@
                     historyContainer.innerHTML = `<div class="text-center p-6 bg-white rounded-lg shadow"><p>还没有任何点评记录。</p></div>`;
                 } else {
                     let historyHtml = '<div class="space-y-4">';
-                    // **SORT**: Ensure latest first
                     ratings.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
                     ratings.forEach(data => {
                         historyHtml += renderRatingCard(data, user.sub, userRole);
@@ -365,17 +360,18 @@
             }
         }
 
-        // **LAYOUT UPDATED for compactness**
         function renderRatingCard(data, currentUserId, currentUserRole) {
             const ratingId = data.id;
-            const date = data.timestamp ? new Date(data.timestamp).toLocaleDateString('zh-CN', { year: 'numeric', month: '2-digit', day: '2-digit' }) : '未知日期';
+            // **FIX**: Corrected date assignment logic
+            const date = data.timestamp
+                ? new Date(data.timestamp).toLocaleDateString('zh-CN', { year: 'numeric', month: '2-digit', day: '2-digit' })
+                : '未知日期'; // Use ternary or || for fallback
             const scoreDisplay = data.normalizedScore !== undefined ? data.normalizedScore.toFixed(2) : 'N/A';
             const gradeDisplay = data.finalGrade ? `${data.finalGrade.grade} - ${data.finalGrade.name_cn}` : '未评级';
             const isOwner = data.userId === currentUserId;
             const isAdmin = currentUserRole === 'admin' || currentUserRole === 'super_admin';
             const canModify = isOwner || isAdmin;
             const canCertify = isAdmin;
-
             const authorDisplay = data.userNickname || data.userEmail || data.userId || '未知用户';
 
             let actionButtonsHtml = '';
@@ -390,9 +386,7 @@
 
             return `
                 <div id="rating-card-${ratingId}" class="block bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow cursor-pointer" onclick="viewRatingDetails('${ratingId}')">
-                    <!-- Combined Info, Score, and Buttons Row -->
                     <div class="flex flex-wrap justify-between items-center gap-2">
-                        <!-- Left: Info -->
                         <div class="flex-grow min-w-0">
                              <p class="text-lg font-bold text-gray-800 truncate" title="${data.cigarInfo?.name || ''}">${data.cigarInfo?.name || '未知名称'}</p>
                             <p class="text-sm text-gray-500 truncate">
@@ -400,14 +394,11 @@
                                 ${ isAdmin ? `<span class="font-medium text-gray-600 ml-2">| 用户: ${authorDisplay}</span>` : '' }
                             </p>
                         </div>
-                        <!-- Right: Score + Buttons -->
                         <div class="flex items-center flex-shrink-0 space-x-3">
-                             <!-- Score -->
                             <div class="text-right">
                                 <p class="text-xl font-black text-indigo-600">${scoreDisplay}</p>
                                 <p class="font-bold text-gray-600 text-xs">${gradeDisplay}</p>
                             </div>
-                            <!-- Buttons -->
                             <div class="action-buttons flex items-center space-x-2 ${!actionButtonsHtml ? 'hidden' : ''}">
                                 ${actionButtonsHtml}
                             </div>
