--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
                         fontFamily: {
                             sans: ['Inter', 'Noto Sans SC', 'system-ui', 'sans-serif'],
                         },
+                        // **UPDATED**: Define the custom aspect ratio
                         aspectRatio: {
-                            '1/1': '1 / 1',
+                            '1179/1572': '1179 / 1572',
                         },
                     }
                 }
@@ -28,30 +29,58 @@
             transform: translateY(-2px);
             box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
         }
+        /* **NEW**: Style for nav links */
+        .nav-link {
+            @apply px-3 py-2 rounded-md text-sm font-medium text-gray-600 hover:bg-gray-100 hover:text-indigo-600 transition-colors;
+        }
+        .nav-link-active {
+            @apply px-3 py-2 rounded-md text-sm font-medium text-indigo-600 bg-indigo-50 font-semibold;
+        }
+         /* Ensure main content area respects padding */
+        .main-container {
+             padding-left: 1rem; /* Equivalent to p-4 */
+             padding-right: 1rem; /* Equivalent to p-4 */
+             padding-top: 1rem;
+             padding-bottom: 2rem; /* Equivalent to md:p-8 */
+             margin-left: auto;
+             margin-right: auto;
+         }
+         @media (min-width: 768px) { /* md breakpoint */
+            .main-container {
+                 padding-left: 2rem;
+                 padding-right: 2rem;
+                 padding-bottom: 2rem;
+            }
+         }
+
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
-    <div class="max-w-7xl mx-auto p-4 md:p-8">
+    <!-- **UPDATED**: Removed max-w-7xl from outer div -->
+    <div class="main-container">
         <!-- Navbar -->
-        <nav class="mb-6 flex flex-wrap justify-between items-center bg-white p-3 rounded-lg shadow-sm gap-4">
-             <a href="index.html" class="text-xl font-bold text-indigo-600">Pistacho评分</a>
-             <div class="flex items-center space-x-4 flex-grow justify-center md:justify-start md:flex-grow-0 order-3 md:order-2 w-full md:w-auto">
-                 <a href="index.html" class="text-indigo-600 font-bold underline">社区动态</a>
-                 <a href="rate.html" class="py-2 px-4 bg-green-500 text-white text-sm font-semibold rounded-lg hover:bg-green-600 transition">去评分</a>
-                 <a href="history.html" class="text-gray-600 hover:text-indigo-600">我的点评历史</a>
-                 <a href="certified.html" class="text-gray-600 hover:text-indigo-600">认证评分</a>
+        <nav class="mb-6 flex flex-wrap justify-between items-center bg-white p-3 rounded-lg shadow-sm gap-4 max-w-7xl mx-auto">
+             <!-- **UPDATED**: Logo text -->
+             <a href="index.html" class="text-lg font-bold text-indigo-600 whitespace-nowrap">Pistacho Cigar Rating System ｜ Pistacho雪茄评分</a>
+             <!-- **UPDATED**: Applied nav-link styles -->
+             <div class="flex items-center space-x-1 flex-grow justify-center md:justify-start md:flex-grow-0 order-3 md:order-2 w-full md:w-auto">
+                 <a href="index.html" class="nav-link-active">社区动态</a>
+                 <a href="rate.html" class="py-2 px-4 bg-green-500 text-white text-sm font-semibold rounded-lg hover:bg-green-600 transition mx-2">去评分</a>
+                 <a href="history.html" class="nav-link">我的点评历史</a>
+                 <a href="certified.html" class="nav-link">认证评分</a>
              </div>
              <div id="login-status-container" class="flex items-center order-2 md:order-3"></div>
         </nav>
 
-        <header class="mb-6">
+        <!-- Header -->
+        <header class="mb-6 max-w-7xl mx-auto">
             <h1 class="text-4xl font-extrabold text-gray-800 text-center">社区动态</h1>
             <p class="mt-2 text-lg text-gray-600 text-center">发现大家的精彩点评</p>
         </header>
 
         <!-- Search and Sort Controls -->
-        <div class="mb-6 bg-white p-4 rounded-lg shadow-sm flex flex-col md:flex-row gap-4 items-center">
-            <input type="text" id="search-input" placeholder="搜索雪茄名称, 产地, 尺寸..." class="flex-grow p-2 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500">
+        <div class="mb-6 bg-white p-4 rounded-lg shadow-sm flex flex-col md:flex-row gap-4 items-center max-w-7xl mx-auto">
+            <input type="text" id="search-input" placeholder="搜索雪茄名称, 产地, 尺寸, 点评..." class="flex-grow p-2 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500">
             <select id="sort-select" class="p-2 border border-gray-300 rounded-md">
                 <option value="latest">最新发布</option>
                 <option value="highest">评分最高</option>
@@ -61,8 +90,9 @@
         </div>
 
         <!-- Ratings Grid -->
+        <!-- **UPDATED**: Removed max-w-7xl -->
         <div id="ratings-grid" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-4 md:gap-6">
-            <p id="loading-message" class="col-span-full text-center text-gray-500">正在加载点评...</p>
+            <p id="loading-message" class="col-span-full text-center text-gray-500 py-10">正在加载点评...</p>
         </div>
 
          <footer class="mt-8 text-center text-gray-500 text-sm">
@@ -85,12 +115,9 @@
 
         // --- Authentication ---
          window.login = function() {
-            const redirectUri = window.location.origin;
+            const redirectUri = window.location.origin; // Redirect back to index (community)
             const authorizeUrl = new URL('/oidc/auth', AUTHING_HOST);
-            authorizeUrl.search = new URLSearchParams({
-                client_id: AUTHING_APP_ID, redirect_uri: redirectUri, response_type: 'code',
-                scope: 'openid profile email phone', state: Math.random().toString(36).substring(2)
-            }).toString();
+            authorizeUrl.search = new URLSearchParams({ client_id: AUTHING_APP_ID, redirect_uri: redirectUri, response_type: 'code', scope: 'openid profile email phone', state: Math.random().toString(36).substring(2) }).toString();
             window.location.href = authorizeUrl.toString();
         }
         window.logout = function() {
@@ -101,12 +128,8 @@
         }
         function renderLoginStatus(user) {
             const container = document.getElementById('login-status-container'); if (!container) return;
-            if (user) {
-                const displayName = user.nickname || user.name || user.preferred_username || user.email || '已登录';
-                container.innerHTML = `<span class="text-sm font-medium text-gray-700 mr-2 hidden sm:inline">${displayName}</span><button onclick="logout()" class="px-3 py-1 text-xs font-medium rounded-full bg-red-500 text-white hover:bg-red-600">退出</button>`;
-            } else {
-                container.innerHTML = `<button onclick="login()" class="px-3 py-1 text-xs font-medium rounded-full bg-green-500 text-white hover:bg-green-600">登录/注册</button>`;
-            }
+            if (user) { const displayName = user.nickname || user.name || user.preferred_username || user.email || '已登录'; container.innerHTML = `<span class="text-sm font-medium text-gray-700 mr-2 hidden sm:inline">${displayName}</span><button onclick="logout()" class="px-3 py-1 text-xs font-medium rounded-full bg-red-500 text-white hover:bg-red-600">退出</button>`; }
+            else { container.innerHTML = `<button onclick="login()" class="px-3 py-1 text-xs font-medium rounded-full bg-green-500 text-white hover:bg-green-600">登录/注册</button>`; }
         }
         async function handleOidcCallback(code) {
              try {
@@ -131,9 +154,9 @@
             loadingMessage.textContent = '正在加载点评...'; loadingMessage.style.display = 'block'; ratingsGrid.innerHTML = '';
             try {
                 const apiUrl = new URL('/api/ratings', window.location.origin);
-                const response = await fetch(apiUrl); // Public fetch
-                if (!response.ok) { let errorText = `加载失败: ${response.status}`; try { const err = await response.json(); errorText = err.error || errorText; } catch (e) { console.warn("Could not parse error response as JSON."); } throw new Error(errorText); }
-                allRatings = await response.json(); displayedRatings = [...allRatings]; renderGrid();
+                const response = await fetch(apiUrl);
+                if (!response.ok) { let errorText = `加载失败: ${response.status}`; try { const err = await response.json(); errorText = err.error || errorText; } catch (e) {} throw new Error(errorText); }
+                allRatings = await response.json(); displayedRatings = [...allRatings]; applyFilters(); // Apply initial sort/filter
             } catch (error) { console.error("加载点评失败:", error); loadingMessage.textContent = `加载点评失败: ${error.message}`; loadingMessage.style.color = 'red'; }
         }
 
@@ -145,11 +168,13 @@
                 const originMatch = rating.cigarInfo?.origin?.toLowerCase().includes(searchTerm);
                 const sizeMatch = rating.cigarInfo?.size?.toLowerCase().includes(searchTerm);
                 const reviewMatch = rating.cigarReview?.toLowerCase().includes(searchTerm);
-                return nameMatch || originMatch || sizeMatch || reviewMatch;
+                 // **NEW**: Also search nickname
+                 const authorMatch = rating.userNickname?.toLowerCase().includes(searchTerm);
+                return nameMatch || originMatch || sizeMatch || reviewMatch || authorMatch;
             });
             if (sortBy === 'highest') { filtered.sort((a, b) => (b.normalizedScore ?? 0) - (a.normalizedScore ?? 0)); }
             else if (sortBy === 'lowest') { filtered.sort((a, b) => (a.normalizedScore ?? 0) - (b.normalizedScore ?? 0)); }
-            else { filtered.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp)); }
+            else { /* latest is default from API or keep current if filtered */ filtered.sort((a, b) => (b.isPinned - a.isPinned) || (new Date(b.timestamp) - new Date(a.timestamp)));} // Keep pinned first
             displayedRatings = filtered; renderGrid();
         }
 
@@ -162,22 +187,29 @@
 
         function createRatingCard(rating) {
             const div = document.createElement('div'); div.className = 'rating-card bg-white rounded-lg shadow-md overflow-hidden transition-all duration-300 cursor-pointer';
-            div.onclick = () => viewRatingDetails(rating); // Pass the whole rating object
+            div.onclick = () => viewRatingDetails(rating);
             const score = rating.normalizedScore !== undefined ? rating.normalizedScore.toFixed(2) : 'N/A';
-            const grade = rating.finalGrade ? `${rating.finalGrade.grade} - ${rating.finalGrade.name_cn}` : '未评级';
-            const author = rating.userNickname || rating.userEmail || '匿名用户';
+            const grade = rating.finalGrade ? `${rating.finalGrade.grade}` : '-'; // Just grade letter
+            const author = rating.userNickname || rating.userEmail || '匿名';
+
+            // **UPDATED**: Image aspect ratio, text sizes, layout
             div.innerHTML = `
-                <div class="aspect-square w-full overflow-hidden">
-                    ${rating.imageUrl ? `<img src="/api/image/${rating.imageUrl}" alt="${rating.cigarInfo?.name || '雪茄图片'}" class="w-full h-full object-cover">` : '<div class="w-full h-full bg-gray-200 flex items-center justify-center text-gray-400">无图</div>'}
+                <div class="aspect-[1179/1572] w-full overflow-hidden">
+                    ${rating.imageUrl ? `<img src="/api/image/${rating.imageUrl}" alt="${rating.cigarInfo?.name || '雪茄图片'}" class="w-full h-full object-cover">`
+                                      : '<div class="w-full h-full bg-gray-200 flex items-center justify-center text-gray-400 text-sm">无图</div>'}
                 </div>
-                <div class="p-3">
-                    <h3 class="font-bold text-md truncate" title="${rating.cigarInfo?.name || ''}">${rating.cigarInfo?.name || '未命名雪茄'}</h3>
-                    <p class="text-xs text-gray-500 truncate">${rating.cigarInfo?.size || ''} | ${rating.cigarInfo?.origin || ''}</p>
-                    <div class="flex justify-between items-center mt-2">
-                         <span class="text-xs text-gray-600 truncate" title="${author}">${author}</span>
+                <div class="p-2"> {/* Reduced padding */}
+                    <h3 class="font-semibold text-sm truncate mb-0.5" title="${rating.cigarInfo?.name || ''}">${rating.cigarInfo?.name || '未命名雪茄'}</h3>
+                    {/* <p class="text-xs text-gray-500 truncate">${rating.cigarInfo?.size || ''} | ${rating.cigarInfo?.origin || ''}</p> */}
+                    <div class="flex justify-between items-center mt-1">
+                         <span class="text-xs text-gray-500 truncate flex items-center">
+                              {/* Placeholder for avatar - you can add later */}
+                              {/* <img src="avatar_placeholder.png" class="w-4 h-4 rounded-full mr-1"> */}
+                              ${author}
+                         </span>
                          <div class="text-right flex-shrink-0">
-                            <p class="font-black text-indigo-600 text-lg">${score}</p>
-                            <p class="font-semibold text-gray-500 text-xs">${grade}</p>
+                            <p class="font-bold text-indigo-600 text-sm">${score}</p>
+                            {/* <p class="font-semibold text-gray-500 text-xs">${grade}</p> */}
                         </div>
                     </div>
                 </div>
@@ -186,78 +218,36 @@
         }
 
         // --- Navigation ---
-        // **LOGIC UPDATED**
         window.viewRatingDetails = function(ratingData) {
             let detailedData = {};
-
-            // **FIX**: Ensure these essential top-level fields always exist
-            if (!ratingData || ratingData.normalizedScore === undefined || !ratingData.finalGrade || !ratingData.cigarInfo) {
-                console.error("viewRatingDetails: Essential top-level data missing!", ratingData);
-                alert("无法加载详情：缺少基本评分信息。");
-                return; // Stop if basic info is missing
-            }
-
-            // Check if fullData is valid and contains the essentials
-            const hasCompleteFullData = ratingData.fullData &&
-                                        ratingData.fullData.config &&
-                                        ratingData.fullData.ratings &&
-                                        ratingData.fullData.calculatedScore !== undefined;
-
+            if (!ratingData || ratingData.normalizedScore === undefined || !ratingData.finalGrade || !ratingData.cigarInfo) { console.error("viewRatingDetails: Essential top-level data missing!", ratingData); alert("无法加载详情：缺少基本评分信息。"); return; }
+            const hasCompleteFullData = ratingData.fullData && ratingData.fullData.config && ratingData.fullData.ratings && ratingData.fullData.calculatedScore !== undefined;
             if (hasCompleteFullData) {
-                 // If complete, send everything
-                 detailedData = {
-                     config: ratingData.fullData.config,
-                     ratings: ratingData.fullData.ratings,
-                     calculatedScore: ratingData.fullData.calculatedScore,
-                     cigarInfo: ratingData.cigarInfo,     // Top level
-                     cigarReview: ratingData.cigarReview, // Top level
-                     imageUrl: ratingData.imageUrl,       // Top level
-                     normalizedScore: ratingData.normalizedScore, // Top level
-                     finalGrade: ratingData.finalGrade,     // Top level
-                     timestamp: ratingData.timestamp,       // Top level
-                     userNickname: ratingData.userNickname, // Top level
-                     userEmail: ratingData.userEmail,       // Top level
-                     isDraft: false
-                 };
-                 console.log("Sending COMPLETE data to results.html:", detailedData);
+                 detailedData = { config: ratingData.fullData.config, ratings: ratingData.fullData.ratings, calculatedScore: ratingData.fullData.calculatedScore, cigarInfo: ratingData.cigarInfo, cigarReview: ratingData.cigarReview, imageUrl: ratingData.imageUrl, normalizedScore: ratingData.normalizedScore, finalGrade: ratingData.finalGrade, timestamp: ratingData.timestamp, userNickname: ratingData.userNickname, userEmail: ratingData.userEmail, isDraft: false };
+                 // console.log("Sending COMPLETE data to results.html:", detailedData); // Reduce logging
             } else {
-                // If incomplete, send only top-level data
                  console.warn(`fullData for rating ${ratingData?.id} is missing or incomplete. Sending only top-level data.`);
-                 detailedData = {
-                     // NO config, ratings, calculatedScore
-                     cigarInfo: ratingData.cigarInfo,
-                     cigarReview: ratingData.cigarReview,
-                     imageUrl: ratingData.imageUrl,
-                     normalizedScore: ratingData.normalizedScore,
-                     finalGrade: ratingData.finalGrade,
-                     timestamp: ratingData.timestamp,
-                     userNickname: ratingData.userNickname,
-                     userEmail: ratingData.userEmail,
-                     isDraft: false
-                 };
-                 console.log("Sending INCOMPLETE (top-level) data to results.html:", detailedData);
+                 detailedData = { cigarInfo: ratingData.cigarInfo, cigarReview: ratingData.cigarReview, imageUrl: ratingData.imageUrl, normalizedScore: ratingData.normalizedScore, finalGrade: ratingData.finalGrade, timestamp: ratingData.timestamp, userNickname: ratingData.userNickname, userEmail: ratingData.userEmail, isDraft: false };
+                 // console.log("Sending INCOMPLETE (top-level) data to results.html:", detailedData); // Reduce logging
             }
-
-            // Navigate regardless (results.html will handle incomplete data)
-            try {
-                 sessionStorage.setItem('cigarRatingResults', JSON.stringify(detailedData));
-                 window.location.href = `results.html`;
-            } catch (e) {
-                  console.error("Error setting sessionStorage:", e);
-                  alert("无法保存会话数据以查看详情。");
-            }
+            try { sessionStorage.setItem('cigarRatingResults', JSON.stringify(detailedData)); window.location.href = `results.html`; }
+            catch (e) { console.error("Error setting sessionStorage:", e); alert("无法保存会话数据以查看详情。"); }
         }
 
 
         // --- Initialization ---
         window.onload = async function() {
-             const urlParams = new URLSearchParams(window.location.search);
-             const code = urlParams.get('code');
-             let user = null;
-             if (code) { user = await handleOidcCallback(code); }
-             else { user = await validateSessionAndGetUser(); }
+             const urlParams = new URLSearchParams(window.location.search); const code = urlParams.get('code'); let user = null;
+             if (code) { user = await handleOidcCallback(code); } else { user = await validateSessionAndGetUser(); }
              currentAuthUser = user; renderLoginStatus(currentAuthUser);
              fetchRatings(); // Fetch and render community ratings
+
+             // Add event listener for Enter key in search input
+             searchInput.addEventListener('keypress', function (e) {
+                 if (e.key === 'Enter') {
+                     applyFilters();
+                 }
+             });
         };
     </script>
 </body>
